# mcp-clickhousex

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/mcp_clickhouse/: __init__.py  config.py  metadata.py  query.py  server.py  validation.py
src/mcp_clickhouse/sql/: columns.sql  databases.sql  tables.sql
src/mcp_clickhousex/: cluster_properties.py  config.py  metadata.py  query.py  server.py
src/mcp_clickhousex/sql/: databases.sql  tables.sql
tests/: __init__.py  conftest.py  test_config.py  test_metadata.py  test_profiles.py  test_query.py  test_server_e2e.py  test_validation.py
