[project]
name = "mcp-clickhousex"
version = "0.1.0"
description = "A read-only Model Context Protocol (MCP) server for ClickHouse: metadata discovery, parameterized queries, and execution plan analysis."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.13.0",
    "mcp[cli]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "anyio",
    "ruff",
]

[project.scripts]
mcp-clickhousex = "mcp_clickhouse.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_clickhouse"]

[tool.uv]
managed = true

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".git", ".venv"]
select = ["E", "F", "I", "B", "UP"]
fix = true

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
strict-markers = true
